create auth documentation
