# docs/swagger.json
@@ -2,7 +2,7 @@
   "openapi": "3.1.0",
   "info": {
     "version": "1.0.0",
-    "title": "Students app",
+    "title": "AquaTrack app",
     "license": {
       "name": "Apache 2.0",
       "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
@@ -18,10 +18,8 @@
       "name": "Waters",
       "description": "Operations about water."
     },
-
     {
       "name": "Users",
-
       "description": "Users operations."
     }
   ],
@@ -31,6 +29,168 @@
     }
   ],
   "paths": {
+    "/auth": {
+      "post": {
+        "tags": ["Auth"],
+        "summary": "Authentification",
+        "operationId": "registerUser",
+        "description": "Register a new user by providing the necessary information.",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "required": ["email", "password"],
+                "properties": {
+                  "email": {
+                    "description": "Email address of the user.",
+                    "type": "string",
+                    "example": "john.doe@example.com"
+                  },
+                  "password": {
+                    "description": "Password for the user account (min 5 characters).",
+                    "type": "string",
+                    "example": "P@ssw0rd123"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Successfully registered a new user.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "required": ["status", "message", "data"],
+                  "properties": {
+                    "status": {
+                      "type": "integer",
+                      "example": 201
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Successfully registered a new user."
+                    },
+                    "data": {
+                      "type": "object",
+                      "required": ["email", "password"],
+                      "properties": {
+                        "_id": {
+                          "type": "string",
+                          "description": "Unique identifier for the user.",
+                          "example": "63f12345e4567ab89cde9012"
+                        },
+                        "weight": {
+                          "description": "User's weight",
+                          "type": "number",
+                          "example": 0
+                        },
+                        "activeTime": {
+                          "description": "User's active time",
+                          "type": "number",
+                          "example": 2
+                        },
+                        "email": {
+                          "type": "string",
+                          "description": "Email address of the user.",
+                          "example": "john.doe@example.com"
+                        },
+                        "waterDailyNorma": {
+                          "description": "The amount of water a user should drink",
+                          "type": "number",
+                          "example": 1.4
+                        },
+                        "gender": {
+                          "description": "User's gender",
+                          "type": "string",
+                          "example": "male"
+                        },
+                        "createdAt": {
+                          "type": "string",
+                          "description": "The date and time when the user was created.",
+                          "example": "2024-12-29T20:33:45Z"
+                        },
+                        "updatedAt": {
+                          "type": "string",
+                          "description": "The date and time when the user information was last updated.",
+                          "example": "2024-12-30T10:15:00Z"
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "required": ["status", "message", "data"],
+                  "properties": {
+                    "status": {
+                      "type": "integer",
+                      "example": 400
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Bad Request"
+                    },
+                    "data": {
+                      "type": "object",
+                      "required": ["message"],
+                      "properties": {
+                        "message": {
+                          "type": "string",
+                          "example": "Invalid request parameters."
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "409": {
+            "description": "ConflictError",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "required": ["status", "message", "data"],
+                  "properties": {
+                    "status": {
+                      "type": "integer",
+                      "example": 409
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "ConflictError"
+                    },
+                    "data": {
+                      "type": "object",
+                      "required": ["message"],
+                      "properties": {
+                        "message": {
+                          "type": "string",
+                          "example": "Email in use"
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/water/{id}": {
       "delete": {
         "tags": ["Waters"],
@@ -291,7 +451,7 @@
             }
           },
           "400": {
-            "$ref": "#/paths/~1water/post/responses/400"
+            "$ref": "#/paths/~1auth/post/responses/400"
           },
           "401": {
             "$ref": "#/paths/~1water/get/responses/401"
@@ -432,7 +592,7 @@
         ],
         "requestBody": {
           "content": {
-            "multipart/form-data": {
+            "application/json": {
               "schema": {
                 "type": "object",
                 "required": ["valume", "date", "userId"],
@@ -522,35 +682,7 @@
             }
           },
           "400": {
-            "description": "Bad Request",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "required": ["status", "message", "data"],
-                  "properties": {
-                    "status": {
-                      "type": "integer",
-                      "example": 400
-                    },
-                    "message": {
-                      "type": "string",
-                      "example": "Bad Request"
-                    },
-                    "data": {
-                      "type": "object",
-                      "required": ["message"],
-                      "properties": {
-                        "message": {
-                          "type": "string",
-                          "example": "Invalid request parameters."
-                        }
-                      }
-                    }
-                  }
-                }
-              }
-            }
+            "$ref": "#/paths/~1auth/post/responses/400"
           },
           "401": {
             "$ref": "#/paths/~1water/get/responses/401"
@@ -624,7 +756,7 @@
             }
           },
           "400": {
-            "$ref": "#/paths/~1water/post/responses/400"
+            "$ref": "#/paths/~1auth/post/responses/400"
           },
           "401": {
             "$ref": "#/paths/~1water/get/responses/401"
@@ -743,7 +875,7 @@
             }
           },
           "400": {
-            "$ref": "#/paths/~1water/post/responses/400"
+            "$ref": "#/paths/~1auth/post/responses/400"
           },
           "401": {
             "$ref": "#/paths/~1water/get/responses/401"
@@ -1004,7 +1136,7 @@
         "requestBody": {
           "required": true,
           "content": {
-            "application/json": {
+            "multipart/form-data": {
               "schema": {
                 "type": "object",
                 "properties": {
@@ -1070,7 +1202,7 @@
             }
           },
           "400": {
-            "$ref": "#/paths/~1water/post/responses/400"
+            "$ref": "#/paths/~1auth/post/responses/400"
           },
           "401": {
             "$ref": "#/paths/~1water/get/responses/401"
